--- a/cft/pipeline_stack.yml
+++ b/cft/pipeline_stack.yml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: 'Creates Homework #2 CodeBuild Project'
+Description: 'Creates CodePipeline Resource Stack for Homework #2'
 Resources:
 
   ArtifactsBucket:
